unpackaged/main/default/objects/SDOC__SDField__c/fields/SDOC__DateTimeValue__c.field-meta.xml
<CustomField>
    <fullName>SDOC__DateTimeValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DateTimeValue</label>
    <type>DateTime</type>
</CustomField>