unpackaged/main/default/objects/SDOC__SDField__c/fields/SDOC__DateValue__c.field-meta.xml
<CustomField>
    <fullName>SDOC__DateValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DateValue</label>
    <type>Date</type>
</CustomField>