unpackaged/main/default/objects/SDOC__SDField__c/fields/SDOC__EmailValue__c.field-meta.xml
<CustomField>
    <fullName>SDOC__EmailValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EmailValue</label>
    <type>Email</type>
</CustomField>