unpackaged/main/default/objects/SDOC__SDField__c/fields/SDOC__NumberValue__c.field-meta.xml
<CustomField>
    <fullName>SDOC__NumberValue__c</fullName>
    <label>NumberValue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>