unpackaged/main/default/objects/SDOC__SDField__c/fields/SDOC__PhoneValue__c.field-meta.xml
<CustomField>
    <fullName>SDOC__PhoneValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PhoneValue</label>
    <type>Phone</type>
</CustomField>