unpackaged/main/default/objects/SDOC__SDField__c/fields/SDOC__SDoc__c.field-meta.xml
<CustomField>
    <fullName>SDOC__SDoc__c</fullName>
    <label>SDoc</label>
    <referenceTo>SDOC__SDoc__c</referenceTo>
    <relationshipLabel>SDoc Fields</relationshipLabel>
    <relationshipName>SDocFields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>